edit home view; fix styles not showing

--- a/public/global.css
+++ b/public/global.css
@@ -7,7 +7,6 @@ html, body {
 body {
 	color: #4a4a4a;
 	margin: 0;
-	box-sizing: border-box;
 	font-family: 'Roboto';
   font-weight: 300;
 }
